Hide blocked messages

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,18 @@
 {
+  "content_scripts": [
+    {
+      "css": ["poof.css"],
+      "matches": [
+        "https://discord.com/app",
+        "https://discord.com/channels/*",
+        "https://discord.com/guild-discovery",
+        "https://discord.com/login",
+        "https://discord.com/message-requests",
+        "https://discord.com/register",
+        "https://discord.com/store"
+      ]
+    }
+  ],
   "description": "Hide blocked messages on Discord.",
   "manifest_version": 3,
   "name": "Poof",
